package org.jufe.anmeldetool.entity;

public enum Reise {
    SELBST,
    SHUTTLE
}
