package org.jufe.anmeldetool.entity.anmeldung;

public enum Alter {
    U16,
    U18,
    O18;
}
