package org.jufe.anmeldetool.entity.anmeldung;

public enum Isst {
    VEGAN,
    VEGETARISCH,
    OMNIVOR
}
